tests/types/errors/import_native_handle_binding_type_mismatch.mog
const { create: fn(i64) handle<math:CounterHandle> } =
    @import("counter")
